add trefle search endpoint
